--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,26 @@
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
 body {
+    position: relative;
+    min-height: 100%;
+    box-sizing: inherit;
     margin: 0;
-    padding: 70px 0 0 0;
+    padding: 70px 0 100px 0;
     background-color: #222326;
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #111111;
+}
+::-webkit-scrollbar-thumb {
+    background: #663399;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #432e63;
 }
